[tool.poetry]
name = "task_e"
version = "0.1.0"
description = ""
authors = ["Natuna1 <Naochi0506@gmial.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
